EventDayDsl/EventDay/Language/GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\code\eventday\vNext\server\tools\dsl\Grammar.g4 by ANTLR 4.5-SNAPSHOT

// Unreachable code detected


#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;

namespace EventDayDsl.EventDay.Language {
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class GrammarParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, NS=8, ENUM=9, 
		ENTITY=10, DEFINE=11, DEFINE_STATE=12, CMD=13, COMMANDS=14, EVENT=15, 
		EVENTS=16, TERMINATE=17, COMMA=18, DOT=19, REQUIRED=20, OPTIONAL=21, IS=22, 
		EQUALS=23, IMPORT=24, MARK=25, MARKER=26, STRINGIFY=27, TELL=28, INTEGER=29, 
		ID=30, TO_STRING=31, MULTILINE_COMMENT=32, COMMENT=33, WS=34;
	public const int
		RULE_program = 0, RULE_importAssingment = 1, RULE_markerDefinition = 2, 
		RULE_stateDefinitionInterface = 3, RULE_stateDefinition = 4, RULE_state_name = 5, 
		RULE_namespaceAssignment = 6, RULE_namespace = 7, RULE_commandAssignment = 8, 
		RULE_eventAssignment = 9, RULE_messageDefinition = 10, RULE_entityDefinition = 11, 
		RULE_toString = 12, RULE_constantDefinitions = 13, RULE_constant = 14, 
		RULE_name = 15, RULE_optionalName = 16, RULE_type = 17, RULE_typeArgument = 18, 
		RULE_typeArguments = 19, RULE_marker = 20, RULE_markerList = 21, RULE_stateApplicationList = 22, 
		RULE_stateApplication = 23, RULE_argument = 24, RULE_typeModifier = 25, 
		RULE_argumentList = 26, RULE_enumDefinition = 27, RULE_enumMember = 28, 
		RULE_enumMemberValue = 29, RULE_enumMemberList = 30;
	public static readonly string[] ruleNames = {
		"program", "importAssingment", "markerDefinition", "stateDefinitionInterface", 
		"stateDefinition", "state_name", "namespaceAssignment", "namespace", "commandAssignment", 
		"eventAssignment", "messageDefinition", "entityDefinition", "toString", 
		"constantDefinitions", "constant", "name", "optionalName", "type", "typeArgument", 
		"typeArguments", "marker", "markerList", "stateApplicationList", "stateApplication", 
		"argument", "typeModifier", "argumentList", "enumDefinition", "enumMember", 
		"enumMemberValue", "enumMemberList"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "':'", "'are'", "'const'", "'<'", "'>'", "'namespace'", 
		"'enum'", "'entity'", "'def'", "'state'", "'command'", "'commands'", "'event'", 
		"'events'", "';'", "','", "'.'", "'!'", "'?'", "'is'", "'='", "'import'", 
		"'mark'", "'marker'", "'text'", "'tell'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, "NS", "ENUM", "ENTITY", 
		"DEFINE", "DEFINE_STATE", "CMD", "COMMANDS", "EVENT", "EVENTS", "TERMINATE", 
		"COMMA", "DOT", "REQUIRED", "OPTIONAL", "IS", "EQUALS", "IMPORT", "MARK", 
		"MARKER", "STRINGIFY", "TELL", "INTEGER", "ID", "TO_STRING", "MULTILINE_COMMENT", 
		"COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public NamespaceAssignmentContext namespaceAssignment() {
			return GetRuleContext<NamespaceAssignmentContext>(0);
		}
		public ImportAssingmentContext[] importAssingment() {
			return GetRuleContexts<ImportAssingmentContext>();
		}
		public ImportAssingmentContext importAssingment(int i) {
			return GetRuleContext<ImportAssingmentContext>(i);
		}
		public StateDefinitionContext[] stateDefinition() {
			return GetRuleContexts<StateDefinitionContext>();
		}
		public StateDefinitionContext stateDefinition(int i) {
			return GetRuleContext<StateDefinitionContext>(i);
		}
		public EntityDefinitionContext[] entityDefinition() {
			return GetRuleContexts<EntityDefinitionContext>();
		}
		public EntityDefinitionContext entityDefinition(int i) {
			return GetRuleContext<EntityDefinitionContext>(i);
		}
		public ConstantContext[] constant() {
			return GetRuleContexts<ConstantContext>();
		}
		public ConstantContext constant(int i) {
			return GetRuleContext<ConstantContext>(i);
		}
		public CommandAssignmentContext[] commandAssignment() {
			return GetRuleContexts<CommandAssignmentContext>();
		}
		public CommandAssignmentContext commandAssignment(int i) {
			return GetRuleContext<CommandAssignmentContext>(i);
		}
		public EventAssignmentContext[] eventAssignment() {
			return GetRuleContexts<EventAssignmentContext>();
		}
		public EventAssignmentContext eventAssignment(int i) {
			return GetRuleContext<EventAssignmentContext>(i);
		}
		public MarkerDefinitionContext[] markerDefinition() {
			return GetRuleContexts<MarkerDefinitionContext>();
		}
		public MarkerDefinitionContext markerDefinition(int i) {
			return GetRuleContext<MarkerDefinitionContext>(i);
		}
		public MessageDefinitionContext[] messageDefinition() {
			return GetRuleContexts<MessageDefinitionContext>();
		}
		public MessageDefinitionContext messageDefinition(int i) {
			return GetRuleContext<MessageDefinitionContext>(i);
		}
		public EnumDefinitionContext[] enumDefinition() {
			return GetRuleContexts<EnumDefinitionContext>();
		}
		public EnumDefinitionContext enumDefinition(int i) {
			return GetRuleContext<EnumDefinitionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==IMPORT) {
				{
				{
				State = 62; importAssingment();
				}
				}
				State = 67;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 68; namespaceAssignment();
			State = 80;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << ENUM) | (1L << ENTITY) | (1L << DEFINE_STATE) | (1L << CMD) | (1L << COMMANDS) | (1L << EVENT) | (1L << EVENTS) | (1L << MARKER) | (1L << ID))) != 0)) {
				{
				State = 78;
				switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					State = 69; stateDefinition();
					}
					break;

				case 2:
					{
					State = 70; entityDefinition();
					}
					break;

				case 3:
					{
					State = 71; constant();
					}
					break;

				case 4:
					{
					State = 72; commandAssignment();
					}
					break;

				case 5:
					{
					State = 73; eventAssignment();
					}
					break;

				case 6:
					{
					State = 74; stateDefinition();
					}
					break;

				case 7:
					{
					State = 75; markerDefinition();
					}
					break;

				case 8:
					{
					State = 76; messageDefinition();
					}
					break;

				case 9:
					{
					State = 77; enumDefinition();
					}
					break;
				}
				}
				State = 82;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportAssingmentContext : ParserRuleContext {
		public ITerminalNode IMPORT() { return GetToken(GrammarParser.IMPORT, 0); }
		public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		public ITerminalNode TERMINATE() { return GetToken(GrammarParser.TERMINATE, 0); }
		public ImportAssingmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importAssingment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterImportAssingment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitImportAssingment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportAssingment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportAssingmentContext importAssingment() {
		ImportAssingmentContext _localctx = new ImportAssingmentContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_importAssingment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(IMPORT);
			State = 84; @namespace();
			State = 86;
			_la = _input.La(1);
			if (_la==TERMINATE) {
				{
				State = 85; Match(TERMINATE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MarkerDefinitionContext : ParserRuleContext {
		public ITerminalNode MARKER() { return GetToken(GrammarParser.MARKER, 0); }
		public ITerminalNode ID() { return GetToken(GrammarParser.ID, 0); }
		public ArgumentListContext argumentList() {
			return GetRuleContext<ArgumentListContext>(0);
		}
		public ITerminalNode TERMINATE() { return GetToken(GrammarParser.TERMINATE, 0); }
		public MarkerDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_markerDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterMarkerDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitMarkerDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMarkerDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MarkerDefinitionContext markerDefinition() {
		MarkerDefinitionContext _localctx = new MarkerDefinitionContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_markerDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(MARKER);
			State = 89; Match(ID);
			State = 94;
			_la = _input.La(1);
			if (_la==T__0) {
				{
				State = 90; Match(T__0);
				State = 91; argumentList();
				State = 92; Match(T__1);
				}
			}

			State = 97;
			_la = _input.La(1);
			if (_la==TERMINATE) {
				{
				State = 96; Match(TERMINATE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateDefinitionInterfaceContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(GrammarParser.ID, 0); }
		public StateDefinitionInterfaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateDefinitionInterface; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterStateDefinitionInterface(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitStateDefinitionInterface(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateDefinitionInterface(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateDefinitionInterfaceContext stateDefinitionInterface() {
		StateDefinitionInterfaceContext _localctx = new StateDefinitionInterfaceContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_stateDefinitionInterface);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateDefinitionContext : ParserRuleContext {
		public ITerminalNode DEFINE_STATE() { return GetToken(GrammarParser.DEFINE_STATE, 0); }
		public State_nameContext state_name() {
			return GetRuleContext<State_nameContext>(0);
		}
		public StateDefinitionInterfaceContext stateDefinitionInterface() {
			return GetRuleContext<StateDefinitionInterfaceContext>(0);
		}
		public ITerminalNode TERMINATE() { return GetToken(GrammarParser.TERMINATE, 0); }
		public StateDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterStateDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitStateDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateDefinitionContext stateDefinition() {
		StateDefinitionContext _localctx = new StateDefinitionContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_stateDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; Match(DEFINE_STATE);
			State = 102; state_name();
			State = 105;
			_la = _input.La(1);
			if (_la==T__2) {
				{
				State = 103; Match(T__2);
				State = 104; stateDefinitionInterface();
				}
			}

			State = 108;
			_la = _input.La(1);
			if (_la==TERMINATE) {
				{
				State = 107; Match(TERMINATE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class State_nameContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(GrammarParser.ID, 0); }
		public State_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_state_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterState_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitState_name(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitState_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public State_nameContext state_name() {
		State_nameContext _localctx = new State_nameContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_state_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceAssignmentContext : ParserRuleContext {
		public ITerminalNode NS() { return GetToken(GrammarParser.NS, 0); }
		public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		public ITerminalNode TERMINATE() { return GetToken(GrammarParser.TERMINATE, 0); }
		public NamespaceAssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceAssignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterNamespaceAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitNamespaceAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceAssignmentContext namespaceAssignment() {
		NamespaceAssignmentContext _localctx = new NamespaceAssignmentContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_namespaceAssignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(NS);
			State = 113; @namespace();
			State = 115;
			_la = _input.La(1);
			if (_la==TERMINATE) {
				{
				State = 114; Match(TERMINATE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(GrammarParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(GrammarParser.ID, i);
		}
		public ITerminalNode[] DOT() { return GetTokens(GrammarParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(GrammarParser.DOT, i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_namespace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(ID);
			State = 122;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==DOT) {
				{
				{
				State = 118; Match(DOT);
				State = 119; Match(ID);
				}
				}
				State = 124;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandAssignmentContext : ParserRuleContext {
		public ITerminalNode COMMANDS() { return GetToken(GrammarParser.COMMANDS, 0); }
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(GrammarParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(GrammarParser.COMMA, i);
		}
		public ITerminalNode TERMINATE() { return GetToken(GrammarParser.TERMINATE, 0); }
		public CommandAssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandAssignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterCommandAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitCommandAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommandAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandAssignmentContext commandAssignment() {
		CommandAssignmentContext _localctx = new CommandAssignmentContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_commandAssignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125; Match(COMMANDS);
			State = 126; Match(T__3);
			State = 127; type();
			State = 132;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 128; Match(COMMA);
				State = 129; type();
				}
				}
				State = 134;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 136;
			_la = _input.La(1);
			if (_la==TERMINATE) {
				{
				State = 135; Match(TERMINATE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventAssignmentContext : ParserRuleContext {
		public ITerminalNode EVENTS() { return GetToken(GrammarParser.EVENTS, 0); }
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(GrammarParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(GrammarParser.COMMA, i);
		}
		public ITerminalNode TERMINATE() { return GetToken(GrammarParser.TERMINATE, 0); }
		public EventAssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventAssignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterEventAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitEventAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventAssignmentContext eventAssignment() {
		EventAssignmentContext _localctx = new EventAssignmentContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_eventAssignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; Match(EVENTS);
			State = 139; Match(T__3);
			State = 140; type();
			State = 145;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 141; Match(COMMA);
				State = 142; type();
				}
				}
				State = 147;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 149;
			_la = _input.La(1);
			if (_la==TERMINATE) {
				{
				State = 148; Match(TERMINATE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
